Update font size and link style

--- a/festival/community.html
+++ b/festival/community.html
@@ -25,17 +25,17 @@
                     </div>
                     <div class="collapse navbar-collapse" id="navcol-1">
                         <ul class="nav navbar-nav navbar-right" style="margin-right:-70px;">
-                            <li role="presentation"><a href="../home/home.html" style="color:rgb(70,87,101);">HOME </a></li>
-                            <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false" href="festival/festival.html">FESTIVAL <span class="caret"></span></a>
+                            <li role="presentation"><a href="../home/home.html" style="color:rgb(70,87,101);font-family:'Open Sans', sans-serif;">HOME </a></li>
+                            <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false" href="festival/festival.html" style="font-family:'Open Sans', sans-serif;">FESTIVAL <span class="caret"></span></a>
                                 <ul class="dropdown-menu" role="menu">
                                     <li role="presentation"><a href="../festival/festival.html">FESTIVAL </a></li>
                                     <li role="presentation"><a href="../festival/exhibition.html">EXHIBITION </a></li>
                                     <li role="presentation"><a href="../festival/community.html">COMMUNITY FEST</a></li>
                                 </ul>
                             </li>
-                            <li role="presentation"><a href="../education/education.html">EDUCATION </a></li>
-                            <li role="presentation"><a href="../archive/archive.html">ARCHIVE </a></li>
-                            <li role="presentation"><a href="../contact/whoweare.html">WHO WE ARE</a></li>
+                            <li role="presentation"><a href="../education/education.html" style="font-family:'Open Sans', sans-serif;">EDUCATION </a></li>
+                            <li role="presentation"><a href="../archive/archive.html" style="font-family:'Open Sans', sans-serif;">ARCHIVE </a></li>
+                            <li role="presentation"><a href="../contact/whoweare.html" style="font-family:'Open Sans', sans-serif;">WHO WE ARE</a></li>
                         </ul>
                     </div>
                 </div>
@@ -47,7 +47,7 @@
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1">
                     <div class="intro">
-                        <h3 style="color:#eb4221;font-family:'Open Sans Condensed', sans-serif;"><strong>COMMUNITY FESTIVAL</strong></h3>
+                        <h3 style="color:#eb4221;font-family:'Open Sans Condensed', sans-serif;font-size:26px;"><strong>COMMUNITY FEST</strong></h3>
                         <p style="color:rgb(86,88,91);">The Community Fest will provide a variety of entertainment from Korea’s traditional to the latest culture with educational programms for everyone. </p>
                         <p style="color:rgb(86,88,91);">The world premiere of Gilnori 2017 will starts the Fest with a big bang to give an insight of what is to come within the Fest. It represents an arts and environmental project called ‘Artrash’ from Korea to shares our concern about
                             the environmental issues. There will be numerous exciting audience participation programmes. One-year-old babies will be invited to experience Doljabee ceremony and there will be other programmes such as Korean folk game (Jaegichagi),
@@ -123,7 +123,7 @@
                         <p>Mystic Nights Entertainment is a group of 15 performers consisting of dancers, singers and musicians. It is made of three distinctive performance groups, two of which are the team of dancers and a team of singers. &nbsp;Mystic
                             Nights was established in 2013 and share strong team work even though one of the team is based in Indonesia. Mystic Nights specialises in choreography for music of all genres across different cultures given the group members’
                             ethnical diversity. </p>
-                        <p> <a href="#" style="color:#808080;"><span style="text-decoration: underline;">Mystic Nights Dance Workshops</span> </a></p>
+                        <p> <a href="../education/mystic.html" style="color:#808080;"><span style="text-decoration: underline;">Mystic Nights Dance Workshops</span> </a></p>
                     </div>
                 </div>
                 <div class="col-lg-2 col-sm-3">
@@ -145,8 +145,8 @@
                         <p>Producer, Meligen is the working name for ML. His career has started in 2007 as a DJ. He plays and produces music of all genres and he specialises in Hip-hop. &nbsp;Since the start of his career, he has been working across various
                             fields within the music industry. &nbsp;His experience includes working as a DJ, music producer, composer, arranger, record producer, recording engineer, mixing engineer, mastering engineer, music director and he also worked
                             as a sound engineer for animations and movies. </p>
-                        <p style="color:#808080;"><a href="https://www.facebook.com/zerothML" style="color:#808080;"><span style="text-decoration: underline;">www.facebook.com/zerothML</span> </a>
-                            <br/><a href="https://www.instagram.com/ml_jeon" style="color:#808080;"><span style="text-decoration: underline;">www.instagram.com/ml_jeon</span> </a></p>
+                        <p style="color:#808080;"><a href="https://www.facebook.com/zerothML" target="_blank" style="color:#808080;"><span style="text-decoration: underline;">www.facebook.com/zerothML</span> </a>
+                            <br/><a href="https://www.instagram.com/ml_jeon" target="_blank" style="color:#808080;"><span style="text-decoration: underline;">www.instagram.com/ml_jeon</span> </a></p>
                     </div>
                 </div>
             </div>
@@ -157,7 +157,7 @@
                         <h5 style="color:#1f2021;"><strong>Singer/Songwriter_Gunmin Kim</strong> </h5>
                         <p>Gunmin Kim is an active member of ‘Artrash’ which is an Arts and Environmental project. He has been touring around Korea to promote the ‘Artrash since 2014. &nbsp;Gunmin as a singer and was inspired by folk and band music, especially
                             60’s British band music and UK artists. &nbsp;His style of music has been influenced by the UK artists such as Adele, Sam Smith, Birdy, Ed Sheeran. </p>
-                        <p> <a href="www.artrash.org " style="color:#808080;"><span style="text-decoration: underline;">www.artrash.org</span> </a></p>
+                        <p> <a href="http://www.artrash.org " target="_blank" style="color:#808080;"><span style="text-decoration: underline;">www.artrash.org</span> </a></p>
                     </div>
                 </div>
                 <div class="col-lg-2 col-sm-3">
@@ -185,6 +185,7 @@
                             </p>
                         <p>Bridge is Samulnori team which was created in 2010 with members who share their passion for Korean traditional music. &nbsp;Its objective is to introduce the energy and joy that Samulnori exudes to the wider public and bring people
                             from different cultures and backgrounds together by building a bridge between them through music. </p>
+                        <p>Jeunghyun Choi, Yung-Kyung Choi, Gina-ha Golin, Seyoung Jeong </p>
                     </div>
                 </div>
                 <div class="col-md-12">
@@ -208,6 +209,7 @@
                     <div class="text">
                         <p>The gayageum is a traditional Korean string instrument with 12 strings and it is probably the best known traditional Korean musical instrument. &nbsp; </p>
                         <p>Gayageum ensemble, Arirang is a group of gayageum musicians based in the UK and have been performing in various events across London. </p>
+                        <p>Soonhee Ji, Myeong-Sook Kim, Mi Ok Hong, Hyung-Su Lim, Hoja Sohn, Myeongsuk Yoon </p>
                     </div>
                 </div>
                 <div class="col-md-12">
@@ -241,11 +243,11 @@
     <img src="../assets/img/logo_hapkido.jpg" style="float:left; width:80px;" />
     <div style="height:100%; display:inline-block; vertical-align:middle; float: none;">
         <br />
-        <a href="http://www.skma.co.uk " style="color:#808080;">
+        <a href="http://www.skma.co.uk " style="color:#808080;" target="_blank">
             <span style="text-decoration: underline;">www.skma.co.uk</span>
         </a>
         <br />
-        <a href="mailto:info@skma.co.uk " style="color:#808080;">
+        <a href="mailto:info@skma.co.uk " style="color:#808080;" target="_blank">
             <span style="text-decoration: underline;">info@skma.co.uk</span>
         </a>
     </div>
@@ -280,7 +282,7 @@
                     <div>
                         <div class="text">
                             <h3 style="font-family:Armata, sans-serif;color:#eb4221;font-size:15px;"><strong>CHEF </strong></h3>
-                            <h4 style="color:#1f2021;"><strong>Sharky Yoon</strong> </h4>
+                            <h5 style="color:#1f2021;"><strong>Sharky Yoon</strong> </h5>
                             <div>
                                 <p>Sharky Yoon is the managing director of Mr.Kimchi and a Korean food developer in the UK.Mr.Kimchi is a premium Kimchi brand launched in 2013 and best known for providing customers with healthy, tasty and fresh kimchi in
                                     the UK. </p>
@@ -313,7 +315,7 @@
                         and to put it into good used, as in these day and age we are used to wasting so much! where are all these things can be put to good and create something beautiful and memorable. This show reflects that! </p>
                     <p>We encourage everyone to join us in this movement, by collecting any trash/rubbish, that they see throughout the event and bring it along to the ‘Market Place’.&nbsp;Children are welcome to join! &nbsp;As the rubbish, you give can
                         be used as a token in exchange for a face painting or education programmes on the day!Let’s Get Arty! </p>
-                    <div><a href="www.artrash.org " style="color:#808080;"><span style="text-decoration: underline;">www.artrash.org</span> </a><img src="../assets/img/logo_artrash.png" style="width:100px;"></div>
+                    <div><a href="http://www.artrash.org " target="_blank" style="color:#808080;"><span style="text-decoration: underline;">www.artrash.org</span> </a><img src="../assets/img/logo_artrash.png" style="width:100px;"></div>
                 </div>
                 <div class="col-lg-5 col-md-5 col-sm-6" style="padding-left:30px;padding-right:30px;"><img class="img-responsive" src="../assets/img/festival/participation_05.jpg" style="padding-bottom:10px;">
                     <p>Players aim to keep a heavily weighted shuttlecock (Jaegi) in the air for as long as possible using their bodies except for their hands. (suitable 5+) </p>
