--- a/home/home.html
+++ b/home/home.html
@@ -32,17 +32,17 @@
                     </div>
                     <div class="collapse navbar-collapse" id="navcol-1">
                         <ul class="nav navbar-nav navbar-right" style="margin-right:-70px;">
-                            <li role="presentation"><a href="../home/home.html" style="color:rgb(70,87,101);">HOME </a></li>
-                            <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false" href="festival/festival.html">FESTIVAL <span class="caret"></span></a>
+                            <li role="presentation"><a href="../home/home.html" style="color:rgb(70,87,101);font-family:'Open Sans', sans-serif;">HOME </a></li>
+                            <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false" href="festival/festival.html" style="font-family:'Open Sans', sans-serif;">FESTIVAL <span class="caret"></span></a>
                                 <ul class="dropdown-menu" role="menu">
                                     <li role="presentation"><a href="../festival/festival.html">FESTIVAL </a></li>
                                     <li role="presentation"><a href="../festival/exhibition.html">EXHIBITION </a></li>
                                     <li role="presentation"><a href="../festival/community.html">COMMUNITY FEST</a></li>
                                 </ul>
                             </li>
-                            <li role="presentation"><a href="../education/education.html">EDUCATION </a></li>
-                            <li role="presentation"><a href="../archive/archive.html">ARCHIVE </a></li>
-                            <li role="presentation"><a href="../contact/whoweare.html">WHO WE ARE</a></li>
+                            <li role="presentation"><a href="../education/education.html" style="font-family:'Open Sans', sans-serif;">EDUCATION </a></li>
+                            <li role="presentation"><a href="../archive/archive.html" style="font-family:'Open Sans', sans-serif;">ARCHIVE </a></li>
+                            <li role="presentation"><a href="../contact/whoweare.html" style="font-family:'Open Sans', sans-serif;">WHO WE ARE</a></li>
                         </ul>
                     </div>
                 </div>
@@ -79,7 +79,7 @@
                 <div class="col-lg-5 col-lg-offset-1 col-md-5 col-md-offset-1">
                     <div class="row">
                         <div class="col-md-12">
-                            <h3 class="text-center" style="font-family:'Open Sans Condensed', sans-serif;"><strong>SPECIAL THANKS</strong></h3></div>
+                            <h3 class="text-center" style="font-family:'Open Sans Condensed', sans-serif;font-size:26px;"><strong>SPECIAL THANKS</strong></h3></div>
                     </div>
                     <div class="row">
                         <div class="col-md-12"><img src="../assets/img/logo_kingston.jpg" width="100px" style="margin:10px;"><img src="../assets/img/logo_oversea_koreans.jpg" width="170px" style="margin:10px;"><img src="../assets/img/logo_hanbok.png" width="140px" style="margin:10px;"><img src="../assets/img/exhibition_02.png" width="170px"
@@ -90,7 +90,7 @@
                 <div class="col-lg-5 col-md-5">
                     <div class="row">
                         <div class="col-md-12">
-                            <h3 class="text-center" style="font-family:'Open Sans Condensed', sans-serif;"><strong>PARTNERS </strong></h3></div>
+                            <h3 class="text-center" style="font-family:'Open Sans Condensed', sans-serif;font-size:26px;"><strong>PARTNERS </strong></h3></div>
                     </div>
                     <div class="row">
                         <div class="col-md-12"><img src="../assets/img/logo_artrash.png" width="100px" style="margin:10px;"></div>
