--- a/contact/whoweare.html
+++ b/contact/whoweare.html
@@ -32,17 +32,17 @@
                     </div>
                     <div class="collapse navbar-collapse" id="navcol-1">
                         <ul class="nav navbar-nav navbar-right" style="margin-right:-70px;">
-                            <li role="presentation"><a href="../home/home.html" style="color:rgb(70,87,101);">HOME </a></li>
-                            <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false" href="festival/festival.html">FESTIVAL <span class="caret"></span></a>
+                            <li role="presentation"><a href="../home/home.html" style="color:rgb(70,87,101);font-family:'Open Sans', sans-serif;">HOME </a></li>
+                            <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false" href="festival/festival.html" style="font-family:'Open Sans', sans-serif;">FESTIVAL <span class="caret"></span></a>
                                 <ul class="dropdown-menu" role="menu">
                                     <li role="presentation"><a href="../festival/festival.html">FESTIVAL </a></li>
                                     <li role="presentation"><a href="../festival/exhibition.html">EXHIBITION </a></li>
                                     <li role="presentation"><a href="../festival/community.html">COMMUNITY FEST</a></li>
                                 </ul>
                             </li>
-                            <li role="presentation"><a href="../education/education.html">EDUCATION </a></li>
-                            <li role="presentation"><a href="../archive/archive.html">ARCHIVE </a></li>
-                            <li role="presentation"><a href="../contact/whoweare.html">WHO WE ARE</a></li>
+                            <li role="presentation"><a href="../education/education.html" style="font-family:'Open Sans', sans-serif;">EDUCATION </a></li>
+                            <li role="presentation"><a href="../archive/archive.html" style="font-family:'Open Sans', sans-serif;">ARCHIVE </a></li>
+                            <li role="presentation"><a href="../contact/whoweare.html" style="font-family:'Open Sans', sans-serif;">WHO WE ARE</a></li>
                         </ul>
                     </div>
                 </div>
@@ -59,13 +59,13 @@
                         target="_self"><span style="text-decoration: underline;">kbce@kbce.org.uk</span></a> </p>
                     <p class="lead" style="font-size:14px;font-family:'Open Sans', sans-serif;">Follow us on our Social media platforms</p>
                     <div class="table-row" style="vertical-align: middle;padding-bottom:10px">
-    <a href="https://www.facebook.com/kbce.official">
+    <a href="https://www.facebook.com/kbce.official" target="_blank">
         <img src="../assets/img/logo_facebook.png" style="float:middle; width:30px;margin:0px;margin-right:10px;margin-left:0px;" />
         <h5 style="display: inline; vertical-align: middle; color:#808080;">Korean British Cultural Exchange</h5>
     </a>
 </div>
                     <div class="table-row" style="vertical-align: middle;">
-    <a href="https://www.instagram.com/_kbce">
+    <a href="https://www.instagram.com/_kbce" target="_blank">
         <img src="../assets/img/logo_insta.png" style="float:middle; width:30px;margin:0px;margin-right:10px;margin-left:0px;" />
         <h5 style="display: inline; vertical-align: middle; color:#808080;">_KBCE</h5>
     </a>
@@ -73,7 +73,7 @@
                 </div>
                 <div class="col-lg-5 col-md-5" style="padding-right:30px;padding-left:30px;">
                     <div class="left-vertical-divider hidden-xs hidden-sm"></div>
-                    <h3 class="text-left" style="margin-bottom:5px;color:#eb4221;font-family:'Open Sans Condensed', sans-serif;"><strong>CONTACT</strong></h3>
+                    <h3 class="text-left" style="margin-bottom:5px;color:#eb4221;font-family:'Open Sans Condensed', sans-serif;font-size:26px;"><strong>CONTACT</strong></h3>
                     <p class="lead" style="font-size:14px;font-family:'Open Sans', sans-serif;">If you like to have more information about KBCE (Korean British Cultural Exchange) and its activities,&nbsp;please fill out the below. </p><img class="img-responsive" src="../assets/img/who-we-are_02.jpg" style="margin-top:10px;margin-bottom:10px;">
                     <div class="form-group has-success has-feedback">
     <div class="fb-comments" data-href="http://kbce.org.uk" data-width="100%" data-numposts="5"></div>
