--- a/festival/festival.html
+++ b/festival/festival.html
@@ -25,17 +25,17 @@
                     </div>
                     <div class="collapse navbar-collapse" id="navcol-1">
                         <ul class="nav navbar-nav navbar-right" style="margin-right:-70px;">
-                            <li role="presentation"><a href="../home/home.html" style="color:rgb(70,87,101);">HOME </a></li>
-                            <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false" href="festival/festival.html">FESTIVAL <span class="caret"></span></a>
+                            <li role="presentation"><a href="../home/home.html" style="color:rgb(70,87,101);font-family:'Open Sans', sans-serif;">HOME </a></li>
+                            <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false" href="festival/festival.html" style="font-family:'Open Sans', sans-serif;">FESTIVAL <span class="caret"></span></a>
                                 <ul class="dropdown-menu" role="menu">
                                     <li role="presentation"><a href="../festival/festival.html">FESTIVAL </a></li>
                                     <li role="presentation"><a href="../festival/exhibition.html">EXHIBITION </a></li>
                                     <li role="presentation"><a href="../festival/community.html">COMMUNITY FEST</a></li>
                                 </ul>
                             </li>
-                            <li role="presentation"><a href="../education/education.html">EDUCATION </a></li>
-                            <li role="presentation"><a href="../archive/archive.html">ARCHIVE </a></li>
-                            <li role="presentation"><a href="../contact/whoweare.html">WHO WE ARE</a></li>
+                            <li role="presentation"><a href="../education/education.html" style="font-family:'Open Sans', sans-serif;">EDUCATION </a></li>
+                            <li role="presentation"><a href="../archive/archive.html" style="font-family:'Open Sans', sans-serif;">ARCHIVE </a></li>
+                            <li role="presentation"><a href="../contact/whoweare.html" style="font-family:'Open Sans', sans-serif;">WHO WE ARE</a></li>
                         </ul>
                     </div>
                 </div>
@@ -47,7 +47,7 @@
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1">
                     <div class="intro">
-                        <h3 class="text-left" style="color:#eb4221;font-family:Open Sans Condensed, sans-serif;"><strong>KINGSTON KOREAN FESTIVAL</strong></h3></div>
+                        <h3 class="text-left" style="color:#eb4221;font-family:Open Sans Condensed, sans-serif;font-size:26px;"><strong>KINGSTON KOREAN FESTIVAL</strong></h3></div>
                 </div>
             </div>
             <div class="row">
