Update Gayageum participant

--- a/festival/community.html
+++ b/festival/community.html
@@ -209,7 +209,7 @@
                     <div class="text">
                         <p>The gayageum is a traditional Korean string instrument with 12 strings and it is probably the best known traditional Korean musical instrument. &nbsp; </p>
                         <p>Gayageum ensemble, Arirang is a group of gayageum musicians based in the UK and have been performing in various events across London. </p>
-                        <p>Soonhee Ji, Myeong-Sook Kim, Mi Ok Hong, Hyung-Su Lim, Hoja Sohn, Myeongsuk Yoon </p>
+                        <p>Cholong Sung (Director), Sun-hee Ji, Myung-suk Kim, Mi-ok Hong, Hyungsoo Yim, Hoja Sohn, Myung-suk Yun, Hyun-ah Kwak&nbsp; </p>
                     </div>
                 </div>
                 <div class="col-md-12">
