Center aligned logos on main page

--- a/home/home.html
+++ b/home/home.html
@@ -82,8 +82,16 @@
                             <h3 class="text-center" style="font-family:'Open Sans Condensed', sans-serif;font-size:26px;"><strong>SPECIAL THANKS</strong></h3></div>
                     </div>
                     <div class="row">
-                        <div class="col-md-12"><img src="../assets/img/logo_kingston.jpg" width="100px" style="margin:10px;"><img src="../assets/img/logo_oversea_koreans.jpg" width="170px" style="margin:10px;"><img src="../assets/img/logo_hanbok.png" width="140px" style="margin:10px;"><img src="../assets/img/exhibition_02.png" width="170px"
-                            style="margin:10px;"></div>
+                        <div class="col-md-12">
+                            <div class="row text-center">
+    <img src="../assets/img/logo_kingston.jpg" width="100px" style="margin:10px;" />
+    <img src="../assets/img/logo_oversea_koreans.jpg" width="170px" style="margin:10px;" />
+</div>
+                            <div class="row text-center">
+    <img src="../assets/img/logo_hanbok.png" width="100px" style="margin:10px;" />
+    <img src="../assets/img/exhibition_02.png" width="170px" style="margin:10px;" />
+</div>
+                        </div>
                     </div>
                     <div class="right-vertical-divider hidden-xs hidden-sm"></div>
                 </div>
@@ -93,7 +101,12 @@
                             <h3 class="text-center" style="font-family:'Open Sans Condensed', sans-serif;font-size:26px;"><strong>PARTNERS </strong></h3></div>
                     </div>
                     <div class="row">
-                        <div class="col-md-12"><img src="../assets/img/logo_artrash.png" width="100px" style="margin:10px;"></div>
+                        <div class="col-md-12">
+                            <div class="row text-center">
+    <img src="../assets/img/logo_artrash.png" width="100px" style="margin:10px;" />
+    <img src="../assets/img/logo_beondi.jpg" width="170px" style="margin:10px;" />
+</div>
+                        </div>
                     </div>
                 </div>
             </div>
