--- a/contact/contact.html
+++ b/contact/contact.html
@@ -11,7 +11,14 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.8.2/css/lightbox.min.css">
     <link rel="stylesheet" href="../assets/css/styles.min.css">
-<link href="https://fonts.googleapis.com/css?family=Open+Sans|Open+Sans+Condensed:700" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Open+Sans|Open+Sans+Condensed:700" rel="stylesheet"><script>(function(d, s, id) {
+ 		  var js, fjs = d.getElementsByTagName(s)[0];
+ 		  if (d.getElementById(id)) return;
+ 		  js = d.createElement(s); js.id = id;
+ 		  js.src = "//connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v2.10&appId=190532464351842";
+ 		  fjs.parentNode.insertBefore(js, fjs);
+ 		}(document, 'script', 'facebook-jssdk'));
+</script>
 </head>
 
 <body>
@@ -42,39 +49,39 @@
             </nav>
         </div>
     </div>
-    <div class="article-dual-column">
+    <div>
         <div class="container">
             <div class="row">
-                <div class="col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1">
-                    <div class="intro">
-                        <h3 class="text-left" style="color:#eb4221;font-family:Open Sans Condensed, sans-serif;font-size:26px;"><strong>KINGSTON KOREAN FESTIVAL</strong></h3></div>
+                <div class="col-lg-5 col-lg-offset-1 col-md-5 col-md-offset-1" style="padding:20px;"><img src="../assets/img/main/logo.png" style="margin-left:-12px;width:250px;margin-bottom:5px;">
+                    <p class="lead" style="font-size:14px;">The Korean British Cultural Exchange is a newly-founded non-profit organisation set up to organise cultural and educational activities to promote Korean culture in the UK. The aim is to help better understand each other and build a
+                        better community together through artistic collaboration and creativity. </p>
+                    <p class="lead" style="font-size:14px;">KBCE is organised by volunteers and always welcome to work with local artists and people. If you like to have more information about the Korean British Cultural Exchange and its activities, please send us an email to&nbsp;<a href="mailto:kbce@kbce.org.uk"
+                        target="_self"><span style="text-decoration: underline;">kbce@kbce.org.uk</span></a> </p>
+                    <p class="lead" style="font-size:14px;">Follow us on our Social media platforms</p>
+                    <div class="table-row" style="vertical-align: middle;padding-bottom:10px">
+    <a href="https://www.facebook.com/kbce.official" target="_blank">
+        <img src="../assets/img/logo_facebook.png" style="float:middle; width:30px;margin:0px;margin-right:10px;margin-left:0px;" />
+        <h5 style="display: inline; vertical-align: middle; color:#808080;">Korean British Cultural Exchange</h5>
+    </a>
+</div>
+                    <div class="table-row" style="vertical-align: middle;">
+    <a href="https://www.instagram.com/_kbce" target="_blank">
+        <img src="../assets/img/logo_insta.png" style="float:middle; width:30px;margin:0px;margin-right:10px;margin-left:0px;" />
+        <h5 style="display: inline; vertical-align: middle; color:#808080;">_KBCE</h5>
+    </a>
+</div>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-4 col-lg-offset-1 col-md-4 col-md-offset-1">
-                    <div class="toc"><img class="img-responsive" src="../assets/img/festival_poster.jpg" width="inherit" height="inherit"></div>
-                </div>
-                <div class="col-lg-6 col-md-6">
-                    <div class="text">
-                        <p> Following the great success of last year’s Autumn Full Moon Festival, Kingston Korean Festival 2017 returns to Kingston where the biggest Korean community in Europe is based. This year, Kingston Korean Festival runs two main programmes
-                            to celebrate Korean culture and engage with british people in many ways. Experience how Koreans are celebrate there first birthday at the Kingston Museum. Come and enjoy community Fest at the market place! Try mouth-watering
-                            Korean food and watch various performances, such K-Dances, K-Music and Hapkido created by Koreans artists in collaboration with the local British artists.
-                            <br/>
-                            <br/> KKingston Korean Festival will be a unique and exciting community event and Korean community would like to welcome everyone to take part and experience Korean culture. There will be also fundraising
-                            activities and events to support local causes.&nbsp;</p>
-                        <br/>
-                        <h5 style="margin-bottom:5px;color:#127d2d;"><strong>Exhibition | ‘Dol’, Baby's&nbsp;First&nbsp;Birthday Celebration in Korea</strong> </h5>
-                        <p>31st August ~ 3rd&nbsp;October 2017&nbsp;
-                            <br/>at Kingston Museum, Kingston </p>
-                        <h5 style="margin-bottom:5px;color:#127d2d;"><strong>Community Fest</strong> </h5>
-                        <p>12:00~16:00, Sat 16th &nbsp;September 2017
-                            <br/>at Ancient Market Place, Kingston</p>
-                    </div>
+                <div class="col-lg-5 col-md-5" style="padding-right:30px;padding-left:30px;">
+                    <div class="left-vertical-divider hidden-xs hidden-sm"></div>
+                    <h3 class="text-left" style="margin-bottom:5px;color:#eb4221;font-family:'Open Sans Condensed', sans-serif;font-size:26px;"><strong>CONTACT</strong></h3>
+                    <p class="lead" style="font-size:14px;">If you like to have more information about KBCE (Korean British Cultural Exchange) and its activities,&nbsp;please fill out the below. </p><img class="img-responsive" src="../assets/img/who-we-are_02.jpg" style="margin-top:10px;margin-bottom:10px;">
+                    <div class="form-group has-success has-feedback">
+    <div class="fb-comments" data-href="http://kbce.org.uk" data-width="100%" data-numposts="5"></div>
+</div>
                 </div>
             </div>
         </div>
     </div>
-    <div class="brands"></div>
     <footer>
         <h5>© 2017 <span style="color:#eb4221"><b>KBCE</b></span> All right reserved</h5></footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
