--- a/education/hanbok.html
+++ b/education/hanbok.html
@@ -35,7 +35,7 @@
                             </li>
                             <li role="presentation"><a href="../education/education.html" style="font-family:'Open Sans', sans-serif;">EDUCATION </a></li>
                             <li role="presentation"><a href="../archive/archive.html" style="font-family:'Open Sans', sans-serif;">ARCHIVE </a></li>
-                            <li role="presentation"><a href="../contact/whoweare.html" style="font-family:'Open Sans', sans-serif;">WHO WE ARE</a></li>
+                            <li role="presentation"><a href="../contact/contact.html" style="font-family:'Open Sans', sans-serif;">WHO WE ARE</a></li>
                         </ul>
                     </div>
                 </div>
@@ -61,7 +61,7 @@
                             <p style="font-size:13px;">Hanbok is the traditional attire of the Korean people, worn daily up until just 100 years ago. These days it is generally only worn on festive occasions or special anniversaries. It is a formal dress and most Koreans keep a
                                 Hanbok for special times in their lives such as weddings or New Year’s celebration. &nbsp; </p>
                             <p>Even though Hanbok is not worn on a daily basis anymore, Korean people have been increasingly wearing Hanbok for fun days out with friends and family especially when visiting Korean historic places such as the royal palaces.
-                                &nbsp;So you can say Hanbok is for everyone for whatever the occasion it might be. </p>
+                                So you can say Hanbok is for everyone for whatever the occasion it might be. </p>
                             <p>There will a stall where boys and girls can dress themselves up in fancy beautiful Hanboks and imagine what it would’ve been like to be Korean princess or perhaps the Prince for a day. There will also be a photo booth, where
                                 you and your friends can take memorable photos to show off your Hanbok. &nbsp;Don’t be shy and come along! </p>
                             <p style="font-size:12px;color:#808080;">Tags: Hanbok, Korean, Traditional Costume</p>
