--- a/festival/exhibition.html
+++ b/festival/exhibition.html
@@ -35,7 +35,7 @@
                             </li>
                             <li role="presentation"><a href="../education/education.html" style="font-family:'Open Sans', sans-serif;">EDUCATION </a></li>
                             <li role="presentation"><a href="../archive/archive.html" style="font-family:'Open Sans', sans-serif;">ARCHIVE </a></li>
-                            <li role="presentation"><a href="../contact/whoweare.html" style="font-family:'Open Sans', sans-serif;">WHO WE ARE</a></li>
+                            <li role="presentation"><a href="../contact/contact.html" style="font-family:'Open Sans', sans-serif;">WHO WE ARE</a></li>
                         </ul>
                     </div>
                 </div>
@@ -55,11 +55,11 @@
                     <h3 style="font-family:'Open Sans Condensed', sans-serif;font-size:22px;"><strong>BABY'S FIRST BIRTHDAY CELEBRATION IN KOREA </strong></h3></div>
                 <div class="col-lg-7 col-lg-offset-1 col-md-7 col-md-offset-1 col-sm-9">
                     <div class="text">
-                        <p>The Kingston Korean Festival begins with the exhibition, Dol, Baby’s First Birthday Celebration in Korea. </p>
-                        <p>The exhibition will show a set of beautiful Korean traditional dress for the one-year-old babies for boys and girls along with a table for ‘Doljabee’ ceremony. ‘Dol’ is the best kwon of the Korean birthday celebrations. It represents
-                            very unique and authentic Korean culture. ‘Doljabee’ ceremony is the main celebration of ‘Dol’. A table is prepared with a large spool of thread, a brush, a Korean calligraphy set, a book, money and a bow and arrow for boys
-                            or a needle cushion or thimble for girls. Then the baby picks up one item from the table that attracts him or her. The item that the child picks up is said to predict the child’s future.&nbsp; </p>
-                        <p>A Korean traditional costume designer, Ms Hae Mi Lee has gratefully donated a set of Korean traditional dress to the Kingston Museum for better relationship between Korean and local people of Kingston. </p>
+                        <p>‘Dol’ is baby’s first birthday celebration in Korea. The exhibition will display a set of beautiful Korean traditional dress (‘Hanbok’) for the one-year-old baby boys and girls along with a table for ‘Doljabee’ ceremony. ‘Dol’
+                            is traditionally the most celebrated birthday in Korea and it represents very unique and authentic Korean culture. </p>
+                        <p>‘Doljabee’ ceremony is the main celebration of ‘Dol’ whereby the birthday baby is invited to grab an item on the table which is presented with various items symbolising different talents or skills. The item the baby picks up is
+                            said to predict the baby’s future.&nbsp; </p>
+                        <p>A Korean traditional costume designer, Ms Hae Mi Lee has gratefully donated a set of Korean traditional dress to the Kingston Museum for better relationship between Korean and local people of Kingston.&nbsp; </p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-3">
@@ -87,10 +87,10 @@
                 </div>
                 <div class="col-lg-8 col-md-8 col-sm-9">
                     <div class="text">
-                        <p>The set of Korean traditional dress (‘Hanbok’) is designed and donated by Ms Hae Mi Lee.&nbsp; Ms Lee is a Hanbok designer and has learnt the techniques from her mother in law who was a Hanbok and soft furnishing designer for over
-                            fifty years and&nbsp;is known to have designed soft furnishing/bedding for three of the past Korean presidents.Ms Lee was also trained under Mr&nbsp;Park Kwang Hoon who is a designated cultural intangible property of Korean
+                        <p>The set of Korean traditional dress (‘Hanbok’) is designed and donated by Ms Hae Mi Lee.&nbsp;Ms Lee is a Hanbok designer and has learnt the techniques from her mother in law who was a Hanbok and soft furnishing designer for over
+                            fifty years and&nbsp;is known to have designed soft furnishing/bedding for three of the past Korean presidents. Ms Lee was also trained under Mr&nbsp;Park Kwang Hoon who is a designated cultural intangible property of Korean
                             traditional stitching and cloth making. &nbsp; </p>
-                        <p>Ms Lee gives new dimension to Hanbok by use of modern fabrics, patterns and cuts.&nbsp; She runs her own Hanbok brand, Saimdang by Lee Haemi and is also a senior lecturer at the Soongeui Women’s University. </p>
+                        <p>Ms Lee gives new dimension to Hanbok by use of modern fabrics, patterns and cuts. She runs her own Hanbok brand, Saimdang by Ms Hae Mi Lee and is also a senior lecturer at the Soongeui Women’s University. </p>
                     </div>
                     <div class="row">
                         <div class="col-md-4">
