--- a/home/home.html
+++ b/home/home.html
@@ -42,7 +42,7 @@
                             </li>
                             <li role="presentation"><a href="../education/education.html" style="font-family:'Open Sans', sans-serif;">EDUCATION </a></li>
                             <li role="presentation"><a href="../archive/archive.html" style="font-family:'Open Sans', sans-serif;">ARCHIVE </a></li>
-                            <li role="presentation"><a href="../contact/whoweare.html" style="font-family:'Open Sans', sans-serif;">WHO WE ARE</a></li>
+                            <li role="presentation"><a href="../contact/contact.html" style="font-family:'Open Sans', sans-serif;">WHO WE ARE</a></li>
                         </ul>
                     </div>
                 </div>
