--- a/festival/community.html
+++ b/festival/community.html
@@ -65,7 +65,7 @@
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1" style="color:#055ada;">
                     <div id="performance">
-    <h3 style="font-size: 24px; font-size: 24px; font-family:'Open Sans Condensed', sans-serif;color:#127d2d;"><strong>PERFORMANCE</strong></h3>
+    <h3 style="font-size: 26px; font-size: 24px; font-family:'Open Sans Condensed', sans-serif;color:#127d2d;"><strong>PERFORMANCE</strong></h3>
 </div>
                 </div>
             </div>
@@ -194,7 +194,7 @@
             </div>
             <div class="row">
                 <div class="col-md-12">
-                    <p style="margin-bottom:0px;"> </p>
+                    <p> </p>
                 </div>
             </div>
             <div class="row">
@@ -224,7 +224,7 @@
             </div>
             <div class="row">
                 <div class="col-md-12">
-                    <p style="margin-bottom:0px;"> </p>
+                    <p> </p>
                 </div>
             </div>
             <div class="row">
@@ -310,7 +310,7 @@
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1" style="color:#055ada;">
                     <div id="participation">
-    <h3 style="font-family:'Open Sans Condensed', sans-serif;color:#127d2d;">
+    <h3 style="font-size: 26px; font-family:'Open Sans Condensed', sans-serif;color:#127d2d;">
         <strong>PARTICIPATION</strong>
     </h3>
 </div>
