Fix a contact page

--- a/contact/contact.html
+++ b/contact/contact.html
@@ -53,11 +53,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-5 col-lg-offset-1 col-md-5 col-md-offset-1" style="padding:20px;"><img src="../assets/img/main/logo.png" style="margin-left:-12px;width:250px;margin-bottom:5px;">
-                    <p class="lead" style="font-size:14px;">The Korean British Cultural Exchange is a newly-founded non-profit organisation set up to organise cultural and educational activities to promote Korean culture in the UK. The aim is to help better understand each other and build a
+                    <p style="font-size:14px;">The Korean British Cultural Exchange is a newly-founded non-profit organisation set up to organise cultural and educational activities to promote Korean culture in the UK. The aim is to help better understand each other and build a
                         better community together through artistic collaboration and creativity. </p>
-                    <p class="lead" style="font-size:14px;">KBCE is organised by volunteers and always welcome to work with local artists and people. If you like to have more information about the Korean British Cultural Exchange and its activities, please send us an email to&nbsp;<a href="mailto:kbce@kbce.org.uk"
+                    <p style="font-size:14px;">KBCE is organised by volunteers and always welcome to work with local artists and people. If you like to have more information about the Korean British Cultural Exchange and its activities, please send us an email to&nbsp;<a href="mailto:kbce@kbce.org.uk"
                         target="_self"><span style="text-decoration: underline;">kbce@kbce.org.uk</span></a> </p>
-                    <p class="lead" style="font-size:14px;">Follow us on our Social media platforms</p>
+                    <p style="font-size:14px;">Follow us on our Social media platforms</p>
                     <div class="table-row" style="vertical-align: middle;padding-bottom:10px">
     <a href="https://www.facebook.com/kbce.official" target="_blank">
         <img src="../assets/img/logo_facebook.png" style="float:middle; width:30px;margin:0px;margin-right:10px;margin-left:0px;" />
@@ -74,7 +74,7 @@
                 <div class="col-lg-5 col-md-5" style="padding-right:30px;padding-left:30px;">
                     <div class="left-vertical-divider hidden-xs hidden-sm"></div>
                     <h3 class="text-left" style="margin-bottom:5px;color:#eb4221;font-family:'Open Sans Condensed', sans-serif;font-size:26px;"><strong>CONTACT</strong></h3>
-                    <p class="lead" style="font-size:14px;">If you like to have more information about KBCE (Korean British Cultural Exchange) and its activities,&nbsp;please fill out the below. </p><img class="img-responsive" src="../assets/img/who-we-are_02.jpg" style="margin-top:10px;margin-bottom:10px;">
+                    <p style="font-size:14px;">If you like to have more information about KBCE (Korean British Cultural Exchange) and its activities,&nbsp;please fill out the below. </p><img class="img-responsive" src="../assets/img/who-we-are_02.jpg" style="margin-top:10px;margin-bottom:10px;">
                     <div class="form-group has-success has-feedback">
     <div class="fb-comments" data-href="http://kbce.org.uk" data-width="100%" data-numposts="5"></div>
 </div>
