Change a font size of performance title

--- a/festival/community.html
+++ b/festival/community.html
@@ -65,7 +65,7 @@
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1" style="color:#055ada;">
                     <div id="performance">
-    <h3 style="font-size: 26px; font-size: 24px; font-family:'Open Sans Condensed', sans-serif;color:#127d2d;"><strong>PERFORMANCE</strong></h3>
+    <h3 style="font-size: 26px; font-family:'Open Sans Condensed', sans-serif;color:#127d2d;"><strong>PERFORMANCE</strong></h3>
 </div>
                 </div>
             </div>
