--- a/festival/festival.html
+++ b/festival/festival.html
@@ -60,7 +60,7 @@
                             to celebrate Korean culture and engage with british people in many ways. Experience how Koreans are celebrate there first birthday at the Kingston Museum. Come and enjoy community Fest at the market place! Try mouth-watering
                             Korean food and watch various performances, such K-Dances, K-Music and Hapkido created by Koreans artists in collaboration with the local British artists.
                             <br/>
-                            <br/> KKingston Korean Festival will be a unique and exciting community event and Korean community would like to welcome everyone to take part and experience Korean culture. There will be also fundraising
+                            <br/> Kingston Korean Festival will be a unique and exciting community event and Korean community would like to welcome everyone to take part and experience Korean culture. There will be also fundraising
                             activities and events to support local causes.&nbsp;</p>
                         <br/>
                         <h5 style="margin-bottom:5px;color:#127d2d;"><strong>Exhibition | ‘Dol’, Baby's&nbsp;First&nbsp;Birthday Celebration in Korea</strong> </h5>
