--- a/home/home.html
+++ b/home/home.html
@@ -93,6 +93,7 @@
                         </div>
                     </div>
                     <div class="right-vertical-divider hidden-xs hidden-sm"></div>
+                    <div class="horizontal-divider hidden-lg hidden-md"></div>
                 </div>
                 <div class="col-lg-5 col-md-5">
                     <div class="row">
@@ -110,7 +111,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-12">
+                <div class="col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1">
                     <h1> </h1></div>
             </div>
             <div class="row">
